refactored pom for standalone