@@ -21,23 +21,53 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.jclouds</groupId>
-		<artifactId>jclouds-demos-project</artifactId>
-		<version>1.6.0-SNAPSHOT</version>
-	</parent>
-	<artifactId>jclouds-demo-perftest</artifactId>
-  <name>jclouds Performance test verses Amazon SDK implementation</name>
-  <description>Performance test verses Amazon SDK implementation</description>
-  
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>4</version>
+  </parent>
+  <groupId>org.jclouds.perftest</groupId>
+  <artifactId>perftest-s3</artifactId>
+  <version>1.6.0-SNAPSHOT</version>
+  <name>jclouds :: perftest :: s3</name>
+  <description>jclouds Performance test verses Amazon S3 Libraries</description>
+  <licenses>
+    <license>
+      <name>Apache License</name>
+      <url>./resources/LICENSE.txt</url>
+    </license>
+  </licenses>
+  <organization>
+    <name>jclouds</name>
+    <url>http://www.jclouds.org/</url>
+  </organization>
   <properties>
     <test.aws-s3.loopcount>100</test.aws-s3.loopcount>
     <test.aws-s3.identity>${test.aws.identity}</test.aws-s3.identity>
     <test.aws-s3.credential>${test.aws.credential}</test.aws-s3.credential>
     <jclouds.version>1.6.0-SNAPSHOT</jclouds.version>
-    <appengine.sdk.version>1.6.5</appengine.sdk.version>
+    <appengine.sdk.version>1.7.2.1</appengine.sdk.version>
+    <maven.compile.source>1.6</maven.compile.source>
+    <maven.compile.target>1.6</maven.compile.target>
   </properties>
-
+  <scm>
+    <connection>scm:git:git://github.com/jclouds/jclouds-perftest-s3.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/jclouds/jclouds-perftest-s3.git</developerConnection>
+    <url>http://github.com/jclouds/jclouds-perftest-s3</url>
+    <tag>HEAD</tag>
+  </scm>
+  <repositories>
+    <repository>
+      <id>sonatype-nexus-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.jclouds.provider</groupId>
@@ -47,7 +77,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
-      <version>1.3.8</version>
+      <version>1.3.22</version>
     </dependency>
     <dependency>
       <groupId>net.java.dev.jets3t</groupId>
@@ -73,6 +103,13 @@
       <groupId>org.jclouds.driver</groupId>
       <artifactId>jclouds-gae</artifactId>
       <version>${jclouds.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jclouds</groupId>
+      <artifactId>jclouds-core</artifactId>
+      <version>${jclouds.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jclouds</groupId>
@@ -114,29 +151,104 @@
       <version>${appengine.sdk.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.5.2</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.5</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.12</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx512m -Xms256m -Djava.awt.headless=true -XX:MaxPermSize=256m -Xss256k</argLine>
+          <parallel>classes</parallel>
+          <threadCount>1</threadCount>
+          <properties>
+            <property>
+              <name>listener</name>
+              <value>org.jclouds.test.testng.UnitTestStatusListener</value>
+            </property>
+          </properties>
+          <systemPropertyVariables>
+            <test.aws-s3.identity>${test.aws-s3.identity}</test.aws-s3.identity>
+            <test.aws-s3.credential>${test.aws-s3.credential}</test.aws-s3.credential>
+            <test.aws-s3.loopcount>${test.aws-s3.loopcount}</test.aws-s3.loopcount>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.mycila.maven-license-plugin</groupId>
+        <artifactId>maven-license-plugin</artifactId>
+        <version>1.9.0</version>
+        <configuration>
+          <strictCheck>true</strictCheck>
+          <encoding>${sourceEncoding}</encoding>
+          <aggregate>true</aggregate>
+          <header>src/etc/header.txt</header>
+          <mapping>
+              <clj>SEMICOLON_STYLE</clj>
+          </mapping>
+          <excludes>
+            <exclude>**/src/**/resources/**</exclude>
+            <exclude>**/LICENSE.txt</exclude>
+            <exclude>**/NOTICE.txt</exclude>
+            <exclude>**/README.md</exclude>
+            <exclude>**/README.txt</exclude>
+            <exclude>**/header.txt</exclude>
+          </excludes>
+          <properties>
+            <year>2012</year>
+            <copyrightHolder>jclouds, Inc.</copyrightHolder>
+          </properties>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-remote-resources-plugin</artifactId>
+        <version>1.3</version>
         <executions>
           <execution>
-            <id>integration</id>
-            <phase>integration-test</phase>
+            <id>process-remote-resources</id>
             <goals>
-              <goal>test</goal>
+              <goal>process</goal>
             </goals>
             <configuration>
-              <threadCount>1</threadCount>
-               <systemPropertyVariables>
-                   <test.aws-s3.identity>${test.aws-s3.identity}</test.aws-s3.identity>
-                   <test.aws-s3.credential>${test.aws-s3.credential}</test.aws-s3.credential>
-                   <test.initializer>${test.initializer}</test.initializer>
-                   <test.aws-s3.loopcount>${test.aws-s3.loopcount}</test.aws-s3.loopcount>
-               </systemPropertyVariables>
+              <resourceBundles>
+                <resourceBundle>org.jclouds:jclouds-resources:${project.version}</resourceBundle>
+              </resourceBundles>
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          <source>${maven.compile.source}</source>
+          <target>${maven.compile.target}</target>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>com.ning.maven.plugins</groupId>
@@ -145,11 +257,11 @@
           <exceptions>
             <exception>
               <conflictingDependencies>
-              <!-- AWS SDK and GAE don't play nice -->
+                <!-- AWS SDK and GAE don't play nice -->
                 <dependency>
                   <groupId>com.amazonaws</groupId>
                   <artifactId>aws-java-sdk</artifactId>
-                  <version>1.3.8</version>
+                  <version>1.3.22</version>
                 </dependency>
                 <dependency>
                   <groupId>com.google.appengine</groupId>
@@ -185,33 +297,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>live</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>integration</id>
-                <phase>integration-test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <systemPropertyVariables>
-                    <test.aws-s3.identity>${test.aws-s3.identity}</test.aws-s3.identity>
-                    <test.aws-s3.credential>${test.aws-s3.credential}</test.aws-s3.credential>
-                    <test.aws-s3.loopcount>${test.aws-s3.loopcount}</test.aws-s3.loopcount>
-                   </systemPropertyVariables>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
